# starcms

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: fastapi_host.py  fasthtml_host.py
scripts/: release.sh
src/starcms/: __init__.py  admin.py  api.py  auth.py  core.py  db.py  forms.py  schema.py
tests/: conftest.py  sample_models.py  test_admin.py  test_api.py  test_auth.py  test_db.py  test_mount.py  test_query.py  test_schema.py
