[project]
name = "starcms"
version = "0.0.1"
description = "Code-first CMS for Python: define Pydantic models, get an admin UI and content API, mounted into your FastAPI or FastHTML app."
readme = "README.md"
authors = [
    { name = "Adam Seifert-Page" }
]
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "pydantic>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.50",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "poethepoet>=0.46.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poe.tasks]
test = "pytest"
lint = "ruff check"
fix = "ruff check --fix"
check = ["lint", "test"]
