[project]
name = "starcms"
version = "0.1.0"
description = "Code-first CMS for Python: define Pydantic models, get an admin UI and content API, mounted into your FastAPI or FastHTML app."
readme = "README.md"
authors = [
    { name = "Adam Seifert-Page" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["cms", "admin", "content-management", "fastapi", "fasthtml", "starlette", "pydantic"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
    "Framework :: FastAPI",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "htpy>=26.5.1",
    "itsdangerous>=2.2.0",
    "pydantic>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.50",
    "starlette>=1.2.1",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30"]

[project.urls]
Repository = "https://github.com/admsftpge/starcms"
Issues = "https://github.com/admsftpge/starcms/issues"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "poethepoet>=0.46.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "python-fasthtml>=0.14.2",
    "ruff>=0.15.16",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poe.tasks]
test = "pytest"
lint = "ruff check"
fix = "ruff check --fix"
check = ["lint", "test"]
demo-fastapi = "uvicorn examples.fastapi_host:app --reload"
demo-fasthtml = "uvicorn examples.fasthtml_host:app --reload"
release = "bash scripts/release.sh"
